--- a/week-one/python_data_structures.ipynb
+++ b/week-one/python_data_structures.ipynb
@@ -563,16 +563,308 @@
    "metadata": {},
    "source": [
     "### Dictionaries\n",
-    "Dictionaries are unordered mappings for storing objects. Dictionaries use key-value pairing, which allows users to quickly grabbing objects without needing to know an index location."
+    "Dictionaries are unordered mappings for storing objects. Dictionaries use key-value pairing, which allows users to quickly grabbing objects without needing to know an index location. Dictionaries use curly braces and colons to signify the keys and their values. \n",
+    "- **For Example:** { key1 : value1 , key2 : value2 }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "429d980a-cd30-4c68-b897-8357f072b27b",
+   "metadata": {},
+   "source": [
+    "### Dictionaries vs List\n",
+    " - Dictionary: objects retrirved by key name, they're unordered and can't be sorted\n",
+    " - Lists: objects retrieved by location, ordered sequence can be indexed or slices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0b568356-1be5-47ab-9514-422698b808bc",
+   "execution_count": 4,
+   "id": "bf09fb9c-6e1f-4859-a8d3-ac9673ea6ec9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value2\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {'key1' : 'value1', 'key2' : 'value2'}\n",
+    "print(my_dict['key2'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1e1fe981-fd10-4e63-b556-10929bf99a31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value3\n",
+      "v\n",
+      "V\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {'key1' : 'value1', 'key2' : 'value2', 'key3' : 'value3'}\n",
+    "print(my_dict['key3'])\n",
+    "print(my_dict['key3'][0])\n",
+    "print(my_dict['key3'][0].upper())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "641bd967-9f97-494d-a2a8-566093ed38f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# it is possible to change values of a key in a dictionary\n",
+    "my_dict = {'key1' : 123, 'key2' : 'value2', 'key3' : 'value3'}\n",
+    "print(my_dict['key1'])\n",
+    "my_dict['key1'] = my_dict['key1'] - 123\n",
+    "print(my_dict['key1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "197a77a3-0b7d-4876-a559-712f6b755216",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'animal': 'Dog', 'answer': 42}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create keys by assignment\n",
+    "d = {}\n",
+    "d['animal'] = 'Dog'\n",
+    "d['answer'] = 42\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "cbef3dc0-df30-4c87-b9ba-0f8c11bbd0b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['key1', 'key2', 'key3'])\n",
+      "dict_values([1, 2, 3])\n",
+      "dict_items([('key1', 1), ('key2', 2), ('key3', 3)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dictionary methods\n",
+    "d = {'key1' : 1, 'key2' : 2, 'key3' : 3}\n",
+    "print(d.keys())\n",
+    "print(d.values())\n",
+    "print(d.items())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2a3634b-5480-45da-a53c-d051e8763e63",
+   "metadata": {},
+   "source": [
+    "### Tuples\n",
+    "Tuples are similar to lists. However, they are immutable. Once an element is in a tuple, it can't be reassigned. Tuples use parenthesis: (1, 2, 3). We use tuple because if we're passing around a object and ensure that it doesn't get changed, tuple is the solution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bad732a7-5359-4d93-9ddf-c46c3a2a9a28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = (1, 2, 3)\n",
+    "print(len(t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8e3ef56a-2af7-4e7d-89dc-9395b4e8df56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('one', 2)\n",
+      "one\n",
+      "2\n",
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = ('one', 2)\n",
+    "print(t)\n",
+    "print(t[0])\n",
+    "print(t[-1])\n",
+    "\n",
+    "# tuple methods\n",
+    "print(t.index('one'))\n",
+    "print(t.count('one'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db393e36-3a55-4d6a-9392-c4d3695c8be2",
+   "metadata": {},
+   "source": [
+    "### Sets\n",
+    "Sets are unordered collections of unique elements. There can be only one representative of the same object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0f4529ba-667b-404b-bc5a-b4ca50a927ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = set()\n",
+    "x.add(1)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "687180d5-40e2-484a-b1f9-ee4d0fea5069",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 5, 6}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list1 = [1, 1, 2, 2, 3, 4, 5, 6, 1, 1]\n",
+    "set(list1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38579532-7cfb-41e0-9277-67278bc5aa19",
+   "metadata": {},
+   "source": [
+    "### Tuples vs Sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7812efc8-12c1-4574-a31c-e75f58c281ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 2)\n",
+      "{1, 2, 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tuple\n",
+    "my_tuple = (1, 2, 3, 2)\n",
+    "print(my_tuple)\n",
+    "\n",
+    "my_set = {1, 2, 3, 2}\n",
+    "print(my_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "773bcb58-a442-4702-b06e-a9396342f3e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_tuple = (1, 2, 3)\n",
+    "print(my_tuple[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2d3ca739-e4dd-4a34-ace1-5a0232dd4b6d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my_set = {1, 2, 3}\n",
+    "print(my_set[0]) # not possible"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d68660db-da3d-42e6-9e5f-46e401309e1d",
+   "metadata": {},
+   "source": [
+    "### B"
+   ]
   }
  ],
  "metadata": {
