--- a/week-one/python_data_structures.ipynb
+++ b/week-one/python_data_structures.ipynb
@@ -863,7 +863,30 @@
    "id": "d68660db-da3d-42e6-9e5f-46e401309e1d",
    "metadata": {},
    "source": [
-    "### B"
+    "### Boolean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "48cf897e-3996-4c3e-b8a0-8f114201f6aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = True\n",
+    "print(a)\n",
+    "\n",
+    "b = None\n",
+    "print(b)"
    ]
   }
  ],
