--- a/week-two/statements.ipynb
+++ b/week-two/statements.ipynb
@@ -587,11 +587,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2e80b8d9-83fc-4dbe-b958-05b8391cd2ad",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 . John  has a grade of  85\n",
+      "2 . Alice  has a grade of  92\n",
+      "3 . Bob  has a grade of  78\n",
+      "4 . Maria  has a grade of  90\n"
+     ]
+    }
+   ],
+   "source": [
+    "students = ['John', 'Alice', 'Bob', 'Maria']\n",
+    "grades = [85, 92, 78, 90]\n",
+    "students_grades = list(zip(students, grades))\n",
+    "count = 1\n",
+    "for students, grades in students_grades:\n",
+    "    print(count, \".\", students, \" has a grade of \", grades)\n",
+    "    count = count + 1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "686c8051-75fa-4496-8ae8-b1d81afc1490",
+   "metadata": {},
+   "source": [
+    "### In, Not in, Random & Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "34b2f90b-7362-41b6-937e-e45c1636b238",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('x' in ['x', 'y', 'z'])\n",
+    "print('x' in [1, 2, 3])\n",
+    "print('x' not in ['x', 'y', 'z'])\n",
+    "print('x' not in [1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f9d0d794-2bc5-4a75-9302-432f95b08563",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 1, 3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import shuffle\n",
+    "mylist = [1, 2, 3, 4, 5]\n",
+    "shuffle(mylist)\n",
+    "print(mylist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e587129a-c496-4eb3-8887-ae5d1cdf2be1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import randint\n",
+    "number = randint(0, 100)\n",
+    "print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4e31e124-e0ec-4bd1-9b61-c4abeb18dd65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter something into this box:  Hello\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Enter something into this box: ')\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ef5b4c0-b2a1-4667-82ba-6c197c09244d",
+   "metadata": {},
+   "source": [
+    "### List Comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e8266393-83e3-4a21-9904-c7f057ed866e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['w', 'o', 'r', 'd']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# grabbing every letter in string\n",
+    "lst = [x for x in 'word']\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "18f3bfde-6867-4660-813b-d8b3de195594",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# square numbers in range and turn into list\n",
+    "lst = [x**2 for x in range(0, 11)]\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "cc923a12-f030-4f02-965f-ef48f79fc48e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check for even numbers in a range\n",
+    "lst = [x for x in range(11) if x % 2 == 0]\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "657f9482-9f09-4177-a64a-2398832e92a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[32.0, 50.0, 68.18, 94.1]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "celsius = [0, 10, 20.1, 34.5]\n",
+    "farenheit = [((9/5) * temp + 32) for temp in celsius]\n",
+    "farenheit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e9508150-d7f2-4f73-81a6-9221b3dd64e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 16, 81, 256, 625, 1296, 2401, 4096, 6561, 10000]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [x**2 for x in [x**2 for x in range(11)]]\n",
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db90d1a6-5f9e-4acc-96e6-fc5ca12652a8",
+   "metadata": {},
+   "source": [
+    "### Exercise 6\n",
+    "Use a list comprehension to create a list of the first letters of every word in the string below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "57488d13-e028-4a1f-af48-791238fbd281",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C', 'a', 'l', 'o', 't', 'f', 'l', 'o', 'e', 'w', 'i', 't', 's']\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = 'Create a list of the first letters of every word in this string'\n",
+    "lst = [x[0] for x in st.split()]\n",
+    "print(lst)"
+   ]
   }
  ],
  "metadata": {
